# xlog

./: .clang-format  CMakeLists.txt  README.md  groups  project.config
include/xlog/: xlog.h
src/: xlog.cc
test/: nolog.cc  test.cc
